tests/unexpected_token.c
//@FAIL
int main() {
    return return;
}